Fixed relative path to profile svg.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="/img/profile.svg" alt="Dimitris Lyras, Managing Director at Ulysses Systems">
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profile.svg" alt="Dimitris Lyras, Managing Director at Ulysses Systems">
               <div class="card-body">
                 <h4 class="card-title">An Outstanding Software Developer</h4>
                 <blockquote class="blockquote">
@@ -102,7 +102,7 @@
           </div>
           <div class="carousel-item">
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="/img/profile.svg" alt="Prashant Sharma, Technical Architect at Ulysses Systems">
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profile.svg" alt="Prashant Sharma, Technical Architect at Ulysses Systems">
               <div class="card-body">
                 <h4 class="card-title">Always Up To Date With New Developments and Innovations</h4>
                 <blockquote class="blockquote">
@@ -142,7 +142,7 @@
           </div>
           <div class="carousel-item">
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="/img/profile.svg" alt="Jesús Javier Villalmanzo Manrique, Senior Software Engineer at Ulysses Systems">
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profile.svg" alt="Jesús Javier Villalmanzo Manrique, Senior Software Engineer at Ulysses Systems">
               <div class="card-body">
                 <h4 class="card-title">Ability to Produce High-Quality Software</h4>
                 <blockquote class="blockquote">
@@ -197,7 +197,7 @@
           </div>
           <div class="carousel-item">
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="/img/profile.svg" alt="Steven Dsouza, Senior Quality Assurance Manager at Ulysses Systems">
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profile.svg" alt="Steven Dsouza, Senior Quality Assurance Manager at Ulysses Systems">
               <div class="card-body">
                 <h4 class="card-title">It Was Great Working Alongside Jon</h4>
                 <blockquote class="blockquote">
@@ -288,7 +288,7 @@
           </div>
           <div class="carousel-item">
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="/img/profile.svg" alt="Panteleimon Pantelis, COO at Ulysses Systems">
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profile.svg" alt="Panteleimon Pantelis, COO at Ulysses Systems">
               <div class="card-body">
                 <h4 class="card-title">Very Intelligent and Hard Working</h4>
                 <blockquote class="blockquote">
