Forced contact button to be circular. Changed tel. no.

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
             <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/envelope-closed.svg" alt="Email Jon Urry jon@urry.me">
             jon@urry.me
           </a>
-          <a href="tel:+44-0-7986-371-299" class="list-group-item list-group-item-action">
+          <a href="tel:+44-7986-371-299" class="list-group-item list-group-item-action">
             <span class="lead">Mobile (UK): </span>
             <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/phone.svg" alt="Call Jon Urry's UK Mobile on +44 7986 371 299">
             +44 (0) 7986 371 299
