Hide colour pallate.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </ul>
       </div>
     </nav>
-    <div id="colours" style="position:fixed; z-index:9999;">
+    <div id="colours" style="position:fixed; z-index:9999; visibility:hidden;">
       <div style="background-color:#303f9f; color:white">
         $dark-primary-colour: #303f9f;
       </div>
