Soring out navbar icon

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <article>
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
       <a class="navbar-brand" href="#home">
-        <img src="img/portfolio (30px).svg" width="48" height="48" class="d-inline-block align-middle" alt="">
+        <img src="img/portfolio-30px.svg" width="48" height="48" class="d-inline-block align-middle" alt="">
         Jon Urry
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
