Contact sction now uses flex layout and external svg images.

--- a/index.html
+++ b/index.html
@@ -44,15 +44,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <!-- <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">What I Do?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
-          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
           </li>
@@ -625,23 +616,51 @@
       </div>
       <div class="narrow-width contact">
         <h1>Contact Me</h1>
-        <div class="list-group text-center">
+        <!-- <div class="list-group text-center"> -->
+        <div class="contact-container">
           <!-- Icons by Open Iconic — www.useiconic.com/open -->
-          <a href="mailto:jon@urry.me" class="list-group-item list-group-item-action">
-            <span class="lead">Email: </span>
-            <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/envelope-closed.svg" alt="Email Jon Urry jon@urry.me">
-            jon@urry.me
-          </a>
-          <a href="tel:+44-7986-371-299" class="list-group-item list-group-item-action">
-            <span class="lead">Mobile (UK): </span>
-            <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/phone.svg" alt="Call Jon Urry's UK Mobile on +44 7986 371 299">
-            +44 (0) 7986 371 299
-          </a>
-          <a href="skype:jonurry" class="list-group-item list-group-item-action">
-            <span class="lead">Skype: </span>
-            <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/microphone.svg" alt="Skype Jon Urry (user name jonurry)">
-            jonurry
-          </a>
+          <div class="contact-card">
+            <a href="mailto:jon@urry.me">
+              <span class="lead">Email: </span>
+              <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/envelope-closed.svg" alt="Email Jon Urry jon@urry.me">
+              jon@urry.me
+            </a>
+          </div>
+          <div class="contact-card">
+            <a href="tel:+44-7986-371-299">
+              <span class="lead">Mobile (UK): </span>
+              <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/phone.svg" alt="Call Jon Urry's UK Mobile on +44 7986 371 299">
+              +44 (0) 7986 371 299
+            </a>
+          </div>
+          <div class="contact-card">
+            <a href="skype:jonurry">
+              <span class="lead">Skype: </span>
+              <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/microphone.svg" alt="Skype Jon Urry (user name jonurry)">
+              jonurry
+            </a>
+          </div>
+          <div class="contact-card">
+            <a href="https://github.com/jonurry">
+              <span class="lead">GitHub: </span>
+              <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/github.svg" alt="GitHub (user name jonurry)">
+              https://github.com/jonurry
+            </a>
+          </div>
+          <div class="contact-card">
+            <a href="https://www.linkedin.com/in/jonurry">
+              <span class="lead">LinkedIn: </span>
+              <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/linked-in.svg" alt="Linked-In (user name jonurry)">
+              https://www.linkedin.com/in/jonurry
+            </a>
+          </div>
+          <div class="contact-card">
+            <a href="https://twitter.com/jonurry">
+              <span class="lead">Twitter: </span>
+              <img class="contact-icon mx-auto d-block" src="/open-iconic/svg/twitter.svg" alt="Twitter (user name jonurry)">
+              https://twitter.com/jonurry
+            </a>
+          </div>
         </div>
         <br>
         <br>
