Finish wedding content. Clean up. Spelling corrections.

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <ul>
           <li>HTML</li>
           <li>CSS</li>
-          <li>Javascript</li>
+          <li>JavaScript</li>
         </ul>
         <br>
       </div>
@@ -447,14 +447,14 @@
           <p>Black Box is an abstract board game for one or two players, which simulates shooting rays into a black box to deduce the locations of "atoms" hidden inside. It was created by Eric Solomon. The board game was published by Waddingtons from the mid-1970s and by Parker Brothers in the late 1970s. The game can also be played with pen and paper, and there are numerous computer implementations for many different platforms, including one which can be run from the Emacs text editor.</P>
           <p>Black Box was inspired by the work of Godfrey Hounsfield who was awarded the 1979 Nobel Prize in Medicine for his invention of the CAT scanner.</p>
           <h3>Why I Built It</h3>
-          <p>I wanted an interesting project to practice the javascript skills that I had been learning. Black Box presented some fairly complex game logic that was fun to code and play with. I knew that I would be able to practice a few design patterns, MVC included. There's plenty of scope for expansion too. I could add high scores, saving game state, adding audio and multi-player capabilities in the future.</p>
+          <p>I wanted an interesting project to practice the JavaScript skills that I had been learning. Black Box presented some fairly complex game logic that was fun to code and play with. I knew that I would be able to practice a few design patterns, MVC included. There's plenty of scope for expansion too. I could add high scores, saving game state, adding audio and multi-player capabilities in the future.</p>
           <h3>How I Built It</h3>
           <p>Black Box was written from scratch and by hand. I didn't want to take any short cuts as it was a vehicle for me to learn how to do things from first principles, using fundamentals. I chose not to use any frameworks or libraries. The JavaScript and CSS is vanilla.</p>
           <p>I wanted to practice different layout methods so I used Grid CSS with a fallback of Flex. For browsers that don't support either Grid or Flex I fallback to a basic block and float layout.</p>
           <p>The website is responsive of course. I regard this as a fundamental requirement, building a mobile friendly site first and then progressively enhancing the site depending on the device's capabilities and available screen real estate.</p>
           <p>I'm keen to employ test driven-development. After reviewing the available options I chose Jest by Facebook and all of the game logic is backed up by unit tests. I may add screenshot testing in the future.</p>
           <p>Another area that really interests me is design patterns. I used a few design patterns for Black Box including MVC. In the future I may implement new versions of the View layer in React and Vue and allow the user to switch between them.</p>
-          <p>I'm interested in build tools having created one myself in the past for a previous company. I though about learning grunt or webpack but I was learing so many other things I thoght it would be better to use CodeKit on this project. CodeKit wraps a lot of the useful functionality of a build tool in a nice UI. I was able to quickly add ES6 and SASS pre-prcessing, automatically add browser specific prefixes in CSS, minify and concatenate files, create source maps and optimise images. CodeKit also has its own web server so you can view your website in real time on multiple local devices and browsers for testing purposes.</p>
+          <p>I'm interested in build tools having created one myself in the past for a previous company. I though about learning Grunt or WebPack but I was learning so many other things I thought it would be better to use CodeKit on this project. CodeKit wraps a lot of the useful functionality of a build tool in a nice UI. I was able to quickly add ES6 and SASS pre-processing, automatically add browser specific prefixes in CSS, minify and concatenate files, create source maps and optimise images. CodeKit also has its own web server so you can view your website in real time on multiple local devices and browsers for testing purposes.</p>
           <p>There's many development IDE's to choose from. I went with Atom by GitHub. It is basically a text editor built with internet technologies. I added several web development packages to supercharge my working environment.</p>
           <p>I chose GitHub for source control duties. You can see all of the code on my GitHub BlackBox project page.</p>
           <p>The Black Box website is hosted via GitHub Pages. This is free for open source projects.</p>
@@ -490,7 +490,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">Javascript</th>
+                <th scope="row">JavaScript</th>
                 <td>
                   <div class="list-group">
                     <p class="lead">Vanilla JS</p>
@@ -505,7 +505,7 @@
                 <td>
                   <div class="list-group">
                     <p class="lead">Responsive Design</p>
-                    <p>The UI is rsponsive and will change according to the size of the device's screen. A mobile first design is employed with enhancements for larger screens. The Black Box grid will always fill the smaller of the screen's dimensions.</p>
+                    <p>The UI is responsive and will change according to the size of the device's screen. A mobile first design is employed with enhancements for larger screens. The Black Box grid will always fill the smaller of the screen's dimensions.</p>
                   </div>
                 </td>
               </tr>
@@ -542,7 +542,7 @@
                     <p class="lead">Drawing</p>
                     <p>Light rays are traced on an SVG element at the end of the game. The path of each light ray is recorded and rendered.</p>
                     <p class="lead">Animation</p>
-                    <p>Light rays are animated by default. This can be swited off in the UI. The SVG paths are traced over a period of time.</p>
+                    <p>Light rays are animated by default. This can be switched off in the UI. The SVG paths are traced over a period of time.</p>
                   </div>
                 </td>
               </tr>
@@ -568,11 +568,11 @@
                     <p class="lead">ESLint</p>
                     <p>Check code syntax.</p>
                     <p class="lead">Babel</p>
-                    <p>Use the latest JavaScript language improvements and have them compiled to standard javascript.</p>
+                    <p>Use the latest JavaScript language improvements and have them compiled to standard JavaScript.</p>
                     <p class="lead">Prettier</p>
                     <p>Format your code in a standard and attractive way.</p>
                     <p class="lead">Auto Prefixer</p>
-                    <p>Don't worry about venor specific CSS prefixes.</p>
+                    <p>Don't worry about vendor specific CSS prefixes.</p>
                     <p class="lead">Source Maps</p>
                     <p>Allow minified/uglified code to be debugged in the browser.</p>
                   </div>
@@ -610,7 +610,7 @@
           <p>I love cycling and really enjoy designing things and being creative. I buy and wear cycling related t-shirts myself and had lots of ideas for my own t-shirt designs. I was also interested in building a website and experimenting with techniques to get people to visit the store via marketing, social media and SEO. I decided to flex my design chops and learn as much as I could by getting stuck in and building.</p>
           <h3>How I Built It</h3>
           <p>I chose to build the website with WordPress and WooCommerce as the main building blocks. WordPress is extremely popular, and WooCommerce converts WordPress from a blogging platform into an eCommerce platform. When combined with Storefront, a UI template, you have a free (open source) online store. This was the easiest, cheapest, and most reliable way to get the project up and running.</p>
-          <p>I didn't want to invest lots of money in physical stock when I didn't know if anyone would buy the t-shirts so I decided to partner with a print on demand and fullfilment company. I integrated my store with their API and they automatically pick up the orders from my website, print the t-shirts on demand and send them directly to the customer.</p>
+          <p>I didn't want to invest lots of money in physical stock when I didn't know if anyone would buy the t-shirts so I decided to partner with a print on demand and fulfillment company. I integrated my store with their API and they automatically pick up the orders from my website, print the t-shirts on demand and send them directly to the customer.</p>
           <p>Electronic payments are handled by Stripe. This is cheaper than PayPal as they just take a small commission from each sale.</p>
           <p>The most effective marketing channel is still email. I chose to use Drip for email marketing as it is free for the first 100 subscribers and they have some really advanced automated workflows.</p>
           <p>The web store is syncronised with my Facebook store so users can browse my products on Facebook and then purchase at Velo Studio.</p>
@@ -642,7 +642,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">On Demand Fulfilment</th>
+                <th scope="row">On Demand Fulfillment</th>
                 <td>
                   <div class="list-group">
                     <p class="lead">Print on Demand</p>
@@ -684,7 +684,7 @@
                 <td>
                   <div class="list-group">
                     <p class="lead">Flywheel</p>
-                    <p>Wordpress hosting and management.</p>
+                    <p>WordPress hosting and management.</p>
                   </div>
                 </td>
               </tr>
@@ -695,7 +695,7 @@
                     <p class="lead">Search Engine Optimisation</p>
                     <p>Each product web page is optimised for search engines so that people can find the products.</p>
                     <p class="lead">SE Ranking</p>
-                    <p>Provides detailed analysis of SEO rankings, competitor strategies, backlinks etc....</p>
+                    <p>Provides detailed analysis of SEO rankings, competitor strategies, back-links etc....</p>
                   </div>
                 </td>
               </tr>
@@ -733,7 +733,7 @@
                 <td>
                   <div class="list-group">
                     <p class="lead">IFTTT</p>
-                    <p>IF This Then That. Automatically repost Instagram posts to Facebook and Twitter.</p>
+                    <p>IF This Then That. Automatically re-post Instagram posts to Facebook and Twitter.</p>
                   </div>
                 </td>
               </tr>
@@ -762,15 +762,19 @@
           <p>A website to celebrate the marriage of Sarah and me. I actually created two websites:</p>
           <ul>
             <li><a href="http://wedding.urry.me/original.html"><b>Pre-wedding</b></a> to give invited guests all the information that they needed about the big day</li>
-            <li><a href="http://wedding.urry.me"><b>Post-wedding</b></a> to showcase the wedding photos and our honeymoon meal at Heston Blumenthal's restauant, the Fat Duck</li>
+            <li><a href="http://wedding.urry.me"><b>Post-wedding</b></a> to showcase the wedding photos and our honeymoon meal at Heston Blumenthal's restaurant, the Fat Duck</li>
           </ul>
           <h3>Why I Built It</h3>
-          <p>In this Internet age it made sense to create a wedding website where everyone could get all the information they needed about the wedding.</p>
+          <p>In this Internet age it made sense to create a wedding website where guests could get all the information they needed about the wedding.</p>
           <p>The original website catered for this having sections for the venue, how to get there, where to stay, advice on gifts, an RSVP mailing list and contact info.</p>
           <p>There was also a section about the bride, groom, bridesmaids and best man. I commissioned cartoon caricature drawings of us all to add a little fun to the site.</p>
           <p>We had a great photographer at the wedding and she took some wonderful photos. The current website showcases those. There's also a few shots that I took of our meal at the Fat Duck.</p>
           <h3>How I Built It</h3>
-          <p></p>
+          <p>I didn't want to create a website totally from scratch so I chose to start with Twitter Bootstrap and customise the styling from there.</p>
+          <p>It was important to layout the information in a logical and clear way so that guests knew exactly what was going on.</p>
+          <p>The post-wedding website is heavily focused on photo images. To make it efficient, I took the highest resolution photos and created several smaller versions that would be served to a variety of device screen sizes. For landscape photos, that meant cropping the photos to have a portrait orientation (keeping the subject matter balanced) and saving to varios sizes.</p>
+          <p>The websits are fully resposive and look good from mobiles to desktops.</p>
+          <p>Both websites were created in 2013 when responsive websites were a relatively new thing.</p>
           <h3>Colophon</h3>
           <p>A list of technologies used in the project:</p>
           <table class="table table-hover">
@@ -797,13 +801,13 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">Javascript</th>
+                <th scope="row">JavaScript</th>
                 <td>
                   <div class="list-group">
                     <p class="lead">Picture Fill</p>
                     <p>A responsive image polyfill for picture, srcset, sizes, and more. Allows different image sizes to be served depending on the device's screen resolution.</p>
                     <p class="lead">Smooth Scroll</p>
-                    <p>Allows the web page to scroll smootly to a different position when an internal link is clicked.</p>
+                    <p>Allows the web page to scroll smoothly to a different position when an internal link is clicked.</p>
                   </div>
                 </td>
               </tr>
@@ -812,18 +816,13 @@
                 <td>
                   <div class="list-group">
                     <p class="lead">Responsive Design</p>
-                    <p>The UI is rsponsive and will change according to the size of the device's screen. A mobile first design is employed with enhancements for larger screens. The Black Box grid will always fill the smaller of the screen's dimensions.</p>
+                    <p>The UI is responsive and will change according to the size of the device's screen. A mobile first design is employed with enhancements for larger screens. The Black Box grid will always fill the smaller of the screen's dimensions.</p>
                   </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row">Adaptive Images</th>
-                <td>
-                  <div class="list-group">
-                    <p class="lead"></p>
-                    <p></p>
-                  </div>
-                </td>
+                <td>Automatically create different image sizes depending on the supported media queries.</td>
               </tr>
               <tr>
                 <th scope="row">Google Fonts</th>
@@ -847,11 +846,11 @@
                     <p class="lead">ESLint</p>
                     <p>Check code syntax.</p>
                     <p class="lead">Babel</p>
-                    <p>Use the latest JavaScript language improvements and have them compiled to standard javascript.</p>
+                    <p>Use the latest JavaScript language improvements and have them compiled to standard JavaScript.</p>
                     <p class="lead">Prettier</p>
                     <p>Format your code in a standard and attractive way.</p>
                     <p class="lead">Auto Prefixer</p>
-                    <p>Don't worry about venor specific CSS prefixes.</p>
+                    <p>Don't worry about vendor specific CSS prefixes.</p>
                     <p class="lead">Source Maps</p>
                     <p>Allow minified/uglified code to be debugged in the browser.</p>
                   </div>
