--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ gtag("config", "UA-112211198-1");
         <p>I started this journey in September 2017.</p>
         <!-- Who To Work With -->
         <h2>Who Do I want To Work With?</h2>
-        <p>I'm looking for a progressive company that can support me as learn how to build web apps.</p>
+        <p>I'm looking for a progressive company that can support me as I learn how to build web apps.</p>
         <p>At the same time, I want to help grow that company and contribute in any way that I can to make them and the team successful.</p>
         <p>Ideally, I will be working with the latest proven open source web technologies.</p>
         <p>I'm pragmatic in my approach to projects and see the value in agile methodologies, the automation of testing and builds, and in best-practice design patterns.</p>
