Updated copy. Local server address. Tab spacing.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ gtag("config", "UA-112211198-1");
         <p>It's a challenging, creative, stimulating, interesting and rewarding thing to do.</p>
         <p>My past experience has mostly been developing apps for desktop computers.</p>
         <p>Now, I am completely refreshing my technological skillset and focusing on developing web applications using open source technologies.</p>
-        <p>Eventually, I want to become a Full Stack Open Source JavaScript Developer.</p>
+        <p>Eventually, I will become a Full Stack Open Source JavaScript Developer.</p>
         <p>I'm looking for a job as a Junior Web Developer and to quickly progress from there.</p>
         <p>Why a role as a Junior, given my experience? I realise that there is a mountain of stuff to learn to be a web developer so it is unreasonable for me to take a senior role until I have proven myself. My past experience will stand me in good stead and I expect to progress quickly. Software development is not just about programming, it takes years of experience to be able to architect, design and build large scale software and I already have those skills. I just need to apply them to an area of technology that is relatively new to me.</p>
         <p>I started this journey in September 2017.</p>
